--- a/2_yolov4/z_layers.ipynb
+++ b/2_yolov4/z_layers.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "african-poker",
+   "id": "periodic-london",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "saving-denmark",
+   "id": "magnetic-customs",
    "metadata": {},
    "source": [
     "### 定义 compose 函数\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dangerous-settle",
+   "id": "thermal-cornell",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brilliant-reading",
+   "id": "finite-reverse",
    "metadata": {},
    "source": [
     "### 定义 Darknet_Conv2D\n"
@@ -55,12 +55,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "animated-reggae",
+   "id": "fitted-liechtenstein",
    "metadata": {},
    "outputs": [],
    "source": [
     "@wraps(Conv2D)\n",
-    "def Darknet_Conv2D(*args, **kwargs):\n",
+    "def darknet_Conv2D(*args, **kwargs):\n",
     "    \"\"\"Wrapper to set Darknet parameters for Convolution2D.\"\"\"\n",
     "    darknet_conv_kwargs = {'kernel_regularizer': l2(5e-4)}\n",
     "    darknet_conv_kwargs['bias_regularizer'] = l2(5e-4)\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "written-determination",
+   "id": "electrical-community",
    "metadata": {},
    "source": [
     "### 定义 Mish 激活函数"
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "sunrise-making",
+   "id": "prepared-remedy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "economic-massachusetts",
+   "id": "derived-poison",
    "metadata": {},
    "source": [
     "### 定义 Darknet_CBM"
@@ -99,24 +99,24 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "printable-three",
+   "id": "light-essex",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Darknet_CBM(*args, **kwargs):\n",
+    "def darknet_CBM(*args, **kwargs):\n",
     "    \"\"\"Darknet Convolution2D followed by BatchNormalization and Mish.\"\"\"\n",
     "    no_bias_kwargs = {'use_bias': False}  # 没懂为啥用 no_bias\n",
     "    no_bias_kwargs.update(kwargs)\n",
     "    return compose(\n",
-    "        Darknet_Conv2D(*args, **no_bias_kwargs),\n",
+    "        darknet_Conv2D(*args, **no_bias_kwargs),\n",
     "        BatchNormalization(),\n",
-    "        Mish()\n",
+    "        mish()\n",
     "    )"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "christian-architecture",
+   "id": "distributed-friday",
    "metadata": {},
    "source": [
     "### 定义 Darknet_CBL"
@@ -125,17 +125,17 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "desperate-mineral",
+   "id": "received-rabbit",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Darknet_CBL(*args, **kwargs):\n",
+    "def darknet_CBL(*args, **kwargs):\n",
     "    \"\"\"Darknet Convolution2D followed by BatchNormalization and LeakyReLU.\"\"\"\n",
-    "    \n",
+    "\n",
     "    no_bias_kwargs = {'use_bias': False}  # 没懂为啥用 no_bias\n",
     "    no_bias_kwargs.update(kwargs)\n",
     "    return compose(\n",
-    "        Darknet_Conv2D(*args, **no_bias_kwargs),\n",
+    "        darknet_Conv2D(*args, **no_bias_kwargs),\n",
     "        BatchNormalization(),\n",
     "        LeakyReLU(alpha=0.1)\n",
     "    )"
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "approximate-stability",
+   "id": "presidential-shark",
    "metadata": {},
    "source": [
     "### 定义 Spp"
@@ -152,22 +152,22 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "wired-senator",
+   "id": "exceptional-video",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Spp(x):\n",
-    "    y1 = MaxPooling2D(pool_size=(5,5), strides=(1,1), padding='same')(x)\n",
-    "    y2 = MaxPooling2D(pool_size=(9,9), strides=(1,1), padding='same')(x)\n",
-    "    y3 = MaxPooling2D(pool_size=(13,13), strides=(1,1), padding='same')(x)\n",
-    "    \n",
+    "def spp(x):\n",
+    "    y1 = MaxPooling2D(pool_size=(5, 5), strides=(1, 1), padding='same')(x)\n",
+    "    y2 = MaxPooling2D(pool_size=(9, 9), strides=(1, 1), padding='same')(x)\n",
+    "    y3 = MaxPooling2D(pool_size=(13, 13), strides=(1, 1), padding='same')(x)\n",
+    "\n",
     "    y = Concatenate()([y3, y2, y1, x])\n",
     "    return y"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "broken-norfolk",
+   "id": "absent-tobago",
    "metadata": {},
    "source": [
     "### 定义 make_five_darknet_CBL"
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "broadband-month",
+   "id": "opening-fortune",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wooden-domestic",
+   "id": "manual-melbourne",
    "metadata": {},
    "source": [
     "### 定义 make_three_darknet_CBL"
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "entertaining-output",
+   "id": "rocky-cameroon",
    "metadata": {},
    "outputs": [],
    "source": [
