--- a/nodes/20210405_目标检测-YOLO系列.md
+++ b/nodes/20210405_目标检测-YOLO系列.md
@@ -1109,7 +1109,7 @@ print(sess.run(c))
 
 <img src="https://pic1.zhimg.com/80/v2-675ea305b015cd3ce51c953cde4bfb28_720w.jpg" alt="img" style="zoom:70%;" />
 
-### 方法二、刷题战术
+**方法二、刷题战术**
 
 > 每道【题目】的难度是不同的； 你要根据以往刷类似题时候的正确率来合理分配精力。
 > --- 老师告诉CE同学 第二个技巧
@@ -1125,6 +1125,193 @@ print(sess.run(c))
 - 当 ![[公式]](https://www.zhihu.com/equation?tex=%5Cgamma%3D0) 时，FL退化成CE，即蓝色线条
 - 当 ![[公式]](https://www.zhihu.com/equation?tex=%5Cgamma) 很大时，线条逐步压低到绿色位置，即各样本对于总loss的贡献受到打压；中间靠右区段承压尤其明显
 
-### 方法三、综合上述两者
+**方法三、综合上述两者**
 
 <img src="https://pic4.zhimg.com/80/v2-cbb231731ce5755825b9d9abd6673e8f_720w.jpg" alt="img" style="zoom:67%;" />
+
+代码实现
+
+```python
+from keras import backend as K
+
+def focal_loss(alpha=0.75, gamma=2.0):
+    """ 参考 https://blog.csdn.net/u011583927/article/details/90716942 """
+    def focal_loss_fixed(y_true, y_pred):
+        # y_true 是个一阶向量, 下式按照加号分为左右两部分
+        # 注意到 y_true的取值只能是 0或者1 (假设二分类问题)，可以视为“掩码”
+        # 加号左边的 y_true*alpha 表示将 y_true中等于1的槽位置为标量 alpha
+        # 加号右边的 (ones-y_true)*(1-alpha) 则是将等于0的槽位置为 1-alpha
+        ones = K.ones_like(y_true)
+        alpha_t = y_true*alpha + (ones-y_true)*(1-alpha)
+
+        # 类似上面，y_true仍然视为 0/1 掩码
+        # 第1部分 `y_true*y_pred` 表示 将 y_true中为1的槽位置为 y_pred对应槽位的值
+        # 第2部分 `(ones-y_true)*(ones-y_pred)` 表示 将 y_true中为0的槽位置为 (1-y_pred)对应槽位的值
+        # 第3部分 K.epsilon() 避免后面 log(0) 溢出
+        p_t = y_true*y_pred + (ones-y_true)*(ones-y_pred) + K.epsilon()
+
+        # 就是公式的字面意思
+        focal_loss = -alpha_t * K.pow((ones-p_t),gamma) * K.log(p_t)
+    return focal_loss_fixed
+
+model = ...
+model.compile(..., loss=focal_loss(gamma=3, alpha=0.5))
+```
+
+## 8.9 模型训练
+
+> https://zhuanlan.zhihu.com/p/41230124
+
+### 8.9.1 参数
+
+模型的训练参数，共有5个，即：
+
+(1) 已标注**边界框（Bounding Box）**的图片数据集，其格式如下：
+
+```python
+图片的位置 框的4个坐标和1个类别ID (xmin,ymin,xmax,ymax,id) ...
+dataset/image.jpg 788,351,832,426,0 805,208,855,270,0
+```
+
+(2) 标注框类别的汇总，即数据集中所标注物体的全部类别，例如：
+
+```python
+aeroplane
+bicycle
+bird
+...
+```
+
+(3) 预训练模型，用于迁移学习（Transfer Learning）中的微调（Fine Tune），可选YOLO v3已训练完成的[COCO](https://link.zhihu.com/?target=http%3A//cocodataset.org/)（Common Objects in Context）模型权重，即：
+
+```python
+pretrained_path = 'model_data/yolo_weights.h5'
+```
+
+(4) 预测特征图（Prediction Feature Map）的anchor框（anchor box）集合：
+
+- 3个尺度（scale）的特征图，每个特征图3个anchor框，共9个框，从小到大排列；
+- 框1~3在大尺度（52x52）特征图中使用，框4~6是中尺度（26x26），框7~9是小尺度（13x13）；
+- 大尺度特征图用于检测小物体，小尺度检测大物体；
+- 9个anchor来源于边界框（Bounding Box）的**K-Means**聚类。
+
+例如，COCO的anchors列表，如下：
+
+```python
+10,13,  16,30,  33,23,  30,61,  62,45,  59,119,  116,90,  156,198,  373,326
+```
+
+(5) 图片输入尺寸，默认为416x416，选择416的原因是：
+
+- 图片尺寸满足**32**的倍数，在DarkNet网络中，执行5次步长为2卷积（`32=2^5`），降采样，其卷积操作如下：
+
+```python
+x = DarknetConv2D_BN_Leaky(num_filters, (3, 3), strides=(2, 2))(x)
+```
+
+- 在最底层时，特征图尺寸需要满足为**奇数**，如13，以保证中心点落在唯一框中。如果为偶数时，则中心点落在中心的4个框中，导致歧义。
+
+### 8.9.2 创建模型
+
+创建 YOLOv3 的网络模型，输入：
+
+- input_shape：图片尺寸；
+- anchors：9 个 anchor box；
+- num_classes：类别数
+- freeze_body：冻结模型，1是冻结DarkNet53的层，2是冻结全部，只保留最后3层；
+- weights_path：预训练模型的权重
+
+即：
+
+```python
+model = create_model(input_shape, anchors, num_classes,
+                     freeze_body=2,
+                     weights_path=pretrained_path)
+```
+
+### 8.9.3 样本数量
+
+样本洗牌（shuffle），将数据集拆分为10份，训练9份，验证1份，比较简单。
+
+实现：
+
+```python
+val_split = 0.1  # 训练和验证的比例with open(annotation_path) as f:
+lines = f.readlines()
+np.random.seed(47)
+np.random.shuffle(lines)
+np.random.seed(None)
+num_val = int(len(lines) * val_split)  # 验证集数量num_train = len(lines) - num_val # 训练集数量
+```
+
+### 8.9.4 第 1 阶段训练
+
+第1阶段，冻结部分网络，只训练底层权重。
+
+- 优化器使用常见的Adam；
+- 损失函数，直接使用模型的输出y_pred，忽略真值y_true；
+
+即：
+
+```python
+model.compile(optimizer=Adam(lr=1e-3), loss={
+    # 使用定制的 yolo_loss Lambda层
+    'yolo_loss': lambda y_true, y_pred: y_pred})  # 损失函数
+```
+
+其中，关于损失函数 yolo_loss，以及 y_true 和 y_pred：
+
+- 把y_true当成输入，作为模型的多输入，把loss封装为层（即Lambda层），作为模型的输出；
+- 在模型中，最终输出的y_pred就是loss；
+- 在编译（compile）时，将loss设置为y_pred即可，无视y_true；
+- 在训练时，随意添加一个符合结构的y_true即可。
+
+Python的Lambda表达式：
+
+```python
+f = lambda y_true, y_pred: y_pred
+print(f(1, 2))  # 输出2
+```
+
+模型fit数据，使用数据生成包装器（`data_generator_wrapper`），按批次生成训练和验证数据。最终，模型model存储权重。实现如下：
+
+```python
+batch_size = 32  # batch
+model.fit_generator(data_generator_wrapper(lines[:num_train], batch_size, input_shape, anchors, num_classes),
+                    steps_per_epoch=max(1, num_train // batch_size),
+                    validation_data=data_generator_wrapper(
+                        lines[num_train:], batch_size, input_shape, anchors, num_classes),
+                    validation_steps=max(1, num_val // batch_size),
+                    epochs=50,
+                    initial_epoch=0,
+                    callbacks=[logging, checkpoint])
+# 存储最终的去权重，再训练过程中，也通过回调存储
+model.save_weights(log_dir + 'trained_weights_stage_1.h5') 
+```
+
+同时，在训练过程中，也会不断保存，epoch完成的模型权重，其中，设置参数为：
+
+- 只存储权重（save_weights_only）；
+- 只存储最优结果（save_best_only）；
+- 每隔3个epoch存储一次（period）。
+
+即：
+
+```python
+checkpoint = ModelCheckpoint(log_dir + 'ep{epoch:03d}-loss{loss:.3f}-val_loss{val_loss:.3f}.h5',
+                             monitor='val_loss', save_weights_only=True,
+                             save_best_only=True, period=3)  # 只存储weights权重
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
