--- a/2_yolov4/b_yolov4_neck_and_body.ipynb
+++ b/2_yolov4/b_yolov4_neck_and_body.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "hollow-uganda",
+   "id": "6574e4e1",
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "crazy-african",
+   "id": "aa1c1515",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "royal-airport",
+   "id": "8339c4ee",
    "metadata": {},
    "source": [
     "## 1、定义 yolo neck\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "comparable-paintball",
+   "id": "8d6b6b99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "seven-temple",
+   "id": "252db21b",
    "metadata": {},
    "source": [
     "## 3、定义 yolo4_body"
@@ -130,13 +130,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "younger-kitty",
+   "id": "f5763929",
    "metadata": {},
    "outputs": [],
    "source": [
     "def yolo4_body(inputs, num_anchors, num_classes, weights_path=None):\n",
     "    \"\"\"Create YOLOv4 model CNN body in keras\"\"\"\n",
-    "    darknet = Model(inputs, csp_darknet53_body(inputs))\n",
+    "    darknet = Model(inputs, csp_resblock_body(inputs))\n",
     "    print('backbone layers number: {}'.format(len(darknet.layers)))\n",
     "    if weights_path is not None:\n",
     "        darknet.load_weights(weights_path, by_name=True)\n",
@@ -168,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
