--- a/nodes/20210416_目标检测-mAP计算.md
+++ b/nodes/20210416_目标检测-mAP计算.md
@@ -1,6 +1,107 @@
 # 20210416_目标检测-mAP计算
 
-## 1、创建 ground-truth 文件
+> https://zhuanlan.zhihu.com/p/48992451
+
+介绍目标检测的基本概念：AP、mAP（mean Average Precision）
+
+## 1、图像检索 mAP
+
+通过图像检索 mAP 为例说明，目标检测中 mAP 与之几乎一样：
+
+<img src="https://pic2.zhimg.com/80/v2-7e1dd60163df014ad08ea15388fedd51_720w.jpg" alt="img" style="zoom:57%;" />
+
+> 以上是图像检索中mAP的计算案例，简要说明下：
+>
+> 1 查询图片1在图像库中检索相似图像，假设图像库中有五张相似图像，表示为图片1、...、图片5，排名不分先后；
+>
+> 2 检索（过程略），返回了top-10图像，如上图第二行，橙色表示相似的图像，灰色为无关图像；
+>
+> 3 接下来就是precision、recall的计算过程了，结合上图比较容易理解；
+
+以返回图片6的节点为例：
+
+top-6中，有3张图像确实为相似图像，另三张图像为无关图像，因此precision = 3 / 6；同时，总共五张相似图像，top-6检索出来了三张，因此recall = 3 / 5；
+
+> 4 然后计算AP，可以看右边的计算方式，可以发现是把列出来的查询率(precision)相加取平均，那么最关键的问题来了：为什么选择这几张图像的precision求平均？可惜图中并没有告诉我们原因；
+
+但其实不难，一句话就是：**选择每个recall区间内对应的最高precision**；
+
+举个栗子，以上图橙色检索案例为例，当我们只选择top-1作为检索结果返回（也即只返回一个检索结果）时，检索性能为：
+
+```text
+top-1：recall = 1 / 5、precision = 1 / 1；# 以下类推；
+top-2：recall = 1 / 5、precision = 1 / 2；
+top-3：recall = 2 / 5、precision = 2 / 3；
+top-4：recall = 2 / 5、precision = 2 / 4；
+top-5：recall = 2 / 5、precision = 2 / 5；
+top-6：recall = 3 / 5、precision = 3 / 6；
+top-7：recall = 3 / 5、precision = 3 / 7；
+top-8：recall = 3 / 5、precision = 3 / 8；
+top-9：recall = 4 / 5、precision = 4 / 9；
+top-10：recall = 5 / 5、precision = 5 / 10；
+```
+
+结合上面清单，先找找recall = 1 / 5区间下的最高precision，对应着precision = 1 / 1；
+
+同理，recall = 2 / 5区间下的最高precision，对应着precision = 2 / 3；
+
+recall = 3 / 5区间下的最高precision，对应着precision = 3 / 6；依次类推；
+
+这样AP = (1 / 1 + 2 / 3 + 3 / 6 + 4 / 9 + 5 / 10) / 5；
+
+那么mAP是啥？计算所有检索图像返回的AP均值，对应上图就是橙、绿突图像计算AP求均值，对应红色框；
+
+## 2、目标检测中 mAP 计算流程
+
+举例：人脸检测
+
+- gt label：1表示人类，0表示背景
+- 某张图像中共检出 20 个 pred bbox，id：1~20，并对应了 confidence score
+- pred bbox 与 gt bbox 算 IoU，结合 threshold，将高于 threshold 的 pred bbox 的 gt label置为1，低于置为0
+
+![img](https://pic3.zhimg.com/80/v2-f3d821d5661e41f6bbeddea2a7ce4972_720w.jpg)
+
+现在对 confident score 排序，得到表2
+
+![img](https://pic1.zhimg.com/80/v2-dbcb5bac2c1e97e151cfe756d5cc55e8_720w.jpg)
+
+*这张表很重要，接下来的precision和recall都是依照这个表计算的﻿，那么这里的confidence score其实就和图像检索中的相似度关联上了，具体地，就是如第一节的图像检索中，虽然我们计算mAP没在乎其检索返回的先后顺序，但top1肯定是与待检索图像最相似的，对应的similarity score最高，对人脸检测而言，pred bbox的confidence score最高，也说明该bbox最有可能是人脸；*
+
+然后计算 **查准率** precision 和 **查全率** recall，这个标准定义如下：
+
+![img](https://pic1.zhimg.com/80/v2-6b533fc4b307c03992a07b08812a12e4_720w.jpg)
+
+这个图画的很舒服。
+
+### 2.1 top-5 结果
+
+![img](https://pic1.zhimg.com/80/v2-30ee6334f6aa93f9d10889fa4a3d1a10_720w.jpg)
+
+在这个例子中，true positives就是指id = 4、2的pred bbox，false positives就是指id = 13、19、6的pred bbox。方框内圆圈外的元素（false negatives + true negatives）是相对于方框内的元素而言，在这个例子中，是指confidence score排在top-5之外的元素，即table 4：
+
+![img](https://pic1.zhimg.com/80/v2-e01ddf90fc9862e12ae5ab0d7416bc10_720w.jpg)
+
+其中，false negatives是指id = 9、16、7、20的4个pred bbox，true negatives是指id = 1、18、5、15、10、17、12、14、8、11、3的11个pred bbox；
+
+那么，这个例子中Precision = 2 / 5 = 40%，意思是对于人脸检测而言，我们选定了5 pred bbox，其中正确的有2个，即准确率为40%；Recall = 2 / 6 = 33%，意思是该图像中共有6个人脸，但是因为我们只召回了2个，所以召回率为33%；
+
+### 2.2 top-1到top-N
+
+实际的目标检测任务中，我们通常不满足只通过top-5来衡量一个模型的好坏，而是需要知道从top-1到top-N（N是所有pred bbox，本文中为20）对应的precision和recall；显然随着我们选定的pred bbox越来也多，recall一定会越来越高，而precision整体上会呈下降趋势；把recall当成横坐标，precision当成纵坐标，即可得到常用的precision-recall曲线，以上例子的precision-recall曲线如fig 1：
+
+![img](https://pic3.zhimg.com/80/v2-46dbabe907e601580c065aa03ee1a89a_720w.jpg)
+
+以上图像如何计算的？可以参照第一节图像检索中的栗子，还是比较容易理解的吧；
+
+上面的每个红点，就相当于根据table 2，按照第一节中图像检索的方式计算出来的，也可以直接参照下面的table 5，自己心里算一算；
+
+那么按照**选择每个recall区间内对应的最高precision**的计算方案，各个recall区间内对应的top-precision，就刚好如fig 1中的绿色框位置，可以进一步结合table 5中的绿色框理解；
+
+好了，那么对这张图像而言，其AP = （1 / 1 + 2 / 2 + 3 / 6 + 4 / 7 + 5 / 11 + 6 / 16）/ 6；这是针对单张图像而言，所有图像也类似方式计算，那么就可以根据所有图像上的pred bbox，采用同样的方式，就计算出了所有图像上人脸这个类的AP；因为人脸检测只有一个类，如Pascal VOC这种20类的，每类都可以计算出一个AP，那么AP_total / 20，就是mAP啦；
+
+## 3、实际部署
+
+### 1、创建 ground-truth 文件
 
 1. 为每张图片创建独立的 ground-truth text文件
 
@@ -23,7 +124,7 @@
    pottedplant 272 190 316 259
    ```
 
-## 2、创建 detection-results 文件
+### 2、创建 detection-results 文件
 
 1. 为每张图片创建独立的 detection-results text文件
 
@@ -45,6 +146,6 @@
    book 0.269833 433 260 506 336
    ```
 
-## 3、计算
+### 3、计算
 
 https://github.com/Cartucho/mAP
