--- a/nodes/20210421_onnx 学习之旅.md
+++ b/nodes/20210421_onnx 学习之旅.md
@@ -111,7 +111,151 @@ print('The model is checked!')
 
 使用ONNX进行模型部署经常碰到一些因为版本兼容性，或者各种框架OP没有对齐等原因导致的各种BUG。这里以一个经典的Pytorch转ONNX的reshape问题为例子，来尝试讲解一下大老师的onnx-simplifier是怎么处理的.
 
-当我们
+当我们想把下面这段代码导出ONNX模型时：
 
+```python
+import torch 
 
+class JustReshape(torch.nn.Module):
+    def __init__(self):
+        super(JustReshape, self).__init__()
+        
+    def forward(self, x):
+        return x.view((x.shape[0], x.shape[1], x.shape[3], x.shape[2]))
+    
+net = JustReshape()
+model_name = 'just_reshape.onnx'
+dummy_input = torch.randn(2,3,4,5)
+torch.onnx.export(net, dummy_input, model_name, input_names=['input'], output_names=['output'])
+```
+
+由于这个模型输入维度是固定的，所以我们期望模型是这样的：
+
+![img](https://pic4.zhimg.com/80/v2-59b6de77babbecfaca6012c65cd69b93_720w.png)
+
+我们期待的ONNX模型
+
+但是，即使使用了ONNX的`polished`工具也只能获得下面的模型：
+
+<img src="https://pic2.zhimg.com/80/v2-fc50aae30dd42d3400afc8abaaf2d53d_720w.jpg" alt="img" style="zoom:90%;" />
+
+要解决这个问题，有两种方法
+
+- 第一种是做一个强制类型转换，将 x.shape[0] 类似的变量强制转换成常量 int(x.shape[0])
+- 第二种使用 onnx-simplifier 来解决这个问题
+
+onnx-simplifier 的核心思想是：利用 onnxruntime 推理一遍 ONNX 的计算图，然后使用常量输出替代冗余的运算 OP。主题代码为：
+
+```python
+def simplify(model:Union[str, onnx.ModelProto], check_n:int=0, perform_optimization:bool=True, skip_fuse_bn:bool=False, input_shapes:Optional[TensorShapes]=None,skipped_optimizers: Optional[Sequence[str]] = None, skip_shape_inference=False) -> Tuple[onnx.ModelProto, bool]:
+    if input_shapes is None:
+        input_shapes = {}
+    if type(model) == str:
+        # 加载 ONNX 模型
+        model = onnx.load(model)
+    # 检查 ONNX 模型格式是否正确，图结构是否完整，节点是否正确
+    onnx.checker.check_model(model)
+    # 深拷贝一份原始 ONNX 模型
+   	model_ori = copy.deepcopy(model)
+    if not skip_shape_inference:
+        # 获取 ONNX 模型中特征图的尺寸
+        model = infer_shapes(model)
+     
+    # 检查输入是否有问题
+    input_shapes = check_and_update_shapes(model, input_shapes)
+    
+    # 对原始的 ONNX 模型做一些图优化工作
+    if perform_optimization:
+        model = optimize(model, skip_fuse_bn, skipped_optimizers)
+        
+    const_nodes = get_constant_nodes(model)
+    res = forward_for_node_outputs(model, const_nodes, input_shapes=input_shapes)
+    const_nodes = clean_constant_nodes(const_nodes, res)
+    model = eliminate_const_nodes(model, const_nodes, res)
+    onnx.checker.check_model(model)
+    
+    if not skip_shape_inference:
+        model = infer_shapes(model)
+    if perform_optimization:
+        model = optimize(model, skip_fuse_bn, skipped_optimizers)
+
+    check_ok = check(model_ori, model, check_n, input_shapes=input_shapes)
+
+    return model, check_ok
+```
+
+程序使用到了 `check_and_update_input_shapes` 接口，这个接口的代码如下，它可以用来判断输入的格式是否正确以及输入模型是否存在所有的指定输入节点
+
+```python
+def check_and_update_input_shapes(model: onnx.ModelProto, input_shapes: TensorShapes) -> TensorShapes:
+    input_names = get_input_names(model)
+    if None in input_shapes:
+        if len(input_names) == 1:
+            input_shapes[input_names[0]] = input_shapes[None]
+            del input_shapes[None]
+        else:
+            raise RuntimeError(
+                'The model has more than 1 inputs, please use the format "input_name:dim0,dim1,...,dimN" in --input-shape')
+    for x in input_shapes:
+        if x not in input_names:
+            raise RuntimeError(
+                'The model doesn\'t have input named "{}"'.format(x))
+    return input_shapes
+```
+
+在确定了输入没有问题之后，程序会根据用户指定是否优化 ONNX 模型进入优化函数，函数定义如下：
+
+```python
+def optimize(model: onnx.ModelProto, skip_fuse_bn:bool, skipped_optimizers:Optional[Sequence[str]]) -> onnx.ModelProto:
+   """
+    :model参数: 待优化的ONXX模型.
+    :return: 优化之后的ONNX模型.
+    简化之前, 使用这个方法产生会在'forward_all'用到的ValueInfo
+    简化之后，使用这个方法去折叠前一步产生的常量到initializer中并且消除没被使用的常量
+    """
+	onnx.checker.check_model(model)
+    onnx.helper.strip_doc_string(model)
+    optimizers_list = [
+        'eliminate_deadend',
+        'eliminate_nop_dropout',
+        'eliminate_nop_cast',
+        'eliminate_nop_monotone_argmax', 'eliminate_nop_pad',
+        'extract_constant_to_initializer', 'eliminate_unused_initializer',
+        'eliminate_nop_transpose',
+        'eliminate_nop_flatten', 'eliminate_identity',
+        'fuse_add_bias_into_conv',
+        'fuse_consecutive_concats',
+        'fuse_consecutive_log_softmax',
+        'fuse_consecutive_reduce_unsqueeze', 'fuse_consecutive_squeezes',
+        'fuse_consecutive_transposes', 'fuse_matmul_add_bias_into_gemm',
+        'fuse_pad_into_conv', 'fuse_transpose_into_gemm', 'eliminate_duplicate_initializer'
+    ]
+    if not skip_fuse_bn:
+        optimizers_list.append('fuse_bn_into_conv')
+    if skippend_optimizers is not None:
+        for opt in skipped_optimizers:
+            try:
+                optimizers_list.remove(opt)
+            except ValurErrot:
+                pass
+    
+    model = onnxoptimizer.optimize(model, optimizers_list, fixed_point=True)
+    onnx.checker.check_model(model)
+    return model
+```
+
+这个函数的功能是对原始的ONNX模型做一些图优化工作，比如merge_bn，use_add_bias_into_conv等等。我们使用`onnx.save`保存一下这个例子中图优化后的模型，可以发现它和优化前的可视化效果是一样的。
+
+这是因为在这个模型中没有上面列举到那些可以做图优化的情况，但是当我们打印一下 ONNX 模型我们会发现 optimize 过后的 ONNX 模型多出一些 initializer 数组
+
+![preview](https://pic1.zhimg.com/v2-4b9f5715724fc4e71ab6258141a97280_r.jpg)
+
+这些数组存储的就是这个图中那些常量 OP 的具体值，通过这个处理我们就可以调用 `get_constant_nodes` 函数来获取 ONNX 模型的常量 OP
+
+这个函数的详细解释如下：
+
+```python
+def get_constant_nodes(m: onnx.ModelProto) -> List[onnx.NodeProto]:
+    const_nodes = []
+```
 
